fix page width by excluding scrollbars

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -121,7 +121,7 @@ html body {
 	font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	height: 100%;
-	min-width: 100vw;
+	width: auto;
 	margin: 0;
 	padding: 0;
 }
